Update approach text

--- a/index.html
+++ b/index.html
@@ -42,15 +42,51 @@
   <hr>
   <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
-  <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
+  <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
   <h2 id="approach">Approach</h2>
-  <p>My approach is <em>person-centred</em> and <em>integrative</em>. The process is yours, and is guided by you, however you are on the day. I work with ideas and techniques from different schools of psychology. My current training is based on systemic and cognitive-behavioural therapies, while my previous studies centre around psychoanalysis and analytical psychology. So my approach starts with a practical attitude towards thoughts, feelings and relationships, acknowledging that symptoms can have roots in unconscious patterns which might present existential or symbolic aspects.</p>
+  <p>My approach is person-centred and integrative.
+    <em>Person-centred</em> means the process is yours, and is guided by you, however you are on the day.
+    <em>Integrative</em> means I work with ideas and techniques from different schools of psychology. My current training is based on systemic and cognitive-behavioural therapies, while my previous studies centre around psychoanalysis and analytical psychology. So my approach starts with a practical attitude towards thoughts, feelings and relationships, acknowledging that problems can have roots in unconscious patterns which might present existential or symbolic aspects.</p>
 
-  <hr>
-  <p  class="cta">Free consultation: write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-  <hr>
+
+  <!-- <hr>
+  <p  class="cta">Free consultation: write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p> -->
+  <!-- <hr> -->
   <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
+  <h2 id="training">Training &amp; Education</h2>
+  <table>
+    <tr>
+      <td>2024-2025</td>
+      <td>
+        MA Counselling<br/>
+        <em>Theologische Hochschule Friedensau, DE</em>
+      </td>
+    </tr>
+    <tr>
+      <td>2024</td>
+      <td>
+        Winter Intensive Study Program, Analytical Psychology<br/>
+        <em>C.G. Jung-Institut, Zürich, CH</em>
+      </td>
+    </tr>
+    <tr>
+      <td>2024</td>
+      <td>
+        Introductory Lecture Series, Psychoanalysis<br/>
+        <em>Institute of Psychoanalysis, London, UK</em>
+    </td>
+    </tr>
+    <tr>
+      <td>2004-2007</td>
+      <td>
+        BA(Hons), Fine Art<br/>
+        <em>Leeds Metropolitan University, UK</em>
+      </td>
+    </tr>
+  </table>
+
+  <!--
   <h2 id="about">About</h2>
   <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
   <p>
@@ -58,13 +94,13 @@
   </p>
   <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
+  -->
   <h3>Safety</h3>
-  <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
-  <p>If you are in an acute crisis, or someone is in danger, please contact a fully-trained professional:</p>
+  <!-- <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p> -->
+  <p>If you are in an acute crisis, or someone is in danger, please contact one of the following:</p>
   <ul>
-    <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a><br/></li>
-    <li><a href="https://krisenchat.de/en">Krisenchat</a><br/></li>
-    <li><a href="https://www.samaritans.org/">Samaritans</a><br/></li>
+    <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
+    <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
   </ul>
   <hr>
 </body>
