--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   <h3>Counselling</h3>
   <p>Psychological support for people experiencing stress, anxiety, depression and loss.<p/>
   <p>Online or in-person in Berlin; <br/>in English or German.</p>
-  <p>I specialise in helping people navigate relationships, work and career difficulties, and life crises and transitions.</p>
-  <p><!--Anxiety, conflict, communication, creativity, death, family, grief, illness, needs/boundaries, loss, relationships, separation, stress, unemployment, work, etc.--></p>
-  <!-- <hr> -->
+  <p>Helping people navigate relationships, work and career difficulties, and life crises and transitions.</p>
   <h3>Fees</h3>
   <p>0&mdash;50€ per session (income-based).<br/>
     Free consultation. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a>.<br/>
@@ -46,7 +44,7 @@
   <h2 id="approach">Approach</h2>
   <p>My approach is person-centred and integrative.
     <em>Person-centred</em> means the process is yours, and is guided by you, however you are on the day.
-    <em>Integrative</em> means I work with ideas and techniques from different schools of psychology. My current training is based on systemic and cognitive-behavioural therapies, while my previous studies centre around psychoanalysis and analytical psychology. So my approach starts with a practical attitude towards thoughts, feelings and relationships, acknowledging that problems can have roots in unconscious patterns which might present existential or symbolic aspects.</p>
+    <em>Integrative</em> means I work with ideas and techniques from different schools of psychology. My current training integrates systemic and cognitive-behavioural theories, while my introductory studies centred around psychoanalysis and analytical psychology. So my approach starts with a practical attitude towards thoughts, feelings and relationships, acknowledging that problems can have roots in unconscious patterns which might present existential or symbolic aspects.</p>
 
 
   <!-- <hr>
@@ -86,15 +84,12 @@
     </tr>
   </table>
 
-  <!--
+  
   <h2 id="about">About</h2>
-  <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
-  <p>
-    After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. The course integrates systemic, psychodynamic and cognitive-behavioural theories and covers individual, couple, and group counselling.
-  </p>
-  <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
+  <p>I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
+  <p>My work led me to psychology, philosophy and personal development. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
-  -->
+  
   <h3>Safety</h3>
   <!-- <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p> -->
   <p>If you are in an acute crisis, or someone is in danger, please contact one of the following:</p>
