--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <img src="img/profile4.jpg" class="profile" />
   <h3>Counselling</h3>
   <p>Psychological support for people experiencing stress, anxiety, depression and loss.<p/>
+  <p>Help navigating relationships, work and career difficulties, and life crises and transitions.</p>
   <p>Online or in-person in Berlin; <br/>in English or German.</p>
-  <p>Helping people navigate relationships, work and career difficulties, and life crises and transitions.</p>
   <h3>Fees</h3>
-  <p>0&mdash;50€ per session (income-based).<br/>
+  <p>20&mdash;50€ per session (income-based).<br/>
     Free consultation. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a>.<br/>
   While in training I work under supervision.</p>
   <hr>
