--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Counselling &mdash; Ant Orant</title>
-  <meta name="description" content="">
+  <title>Counselling: mental health support in Berlin or online &mdash; Ant Orant</title>
+  <meta name="description" content="Mental health support for stress, anxiety, depression, work and relationship difficulties, crisis or transition. In Berlin or online; in English or German">
 
   <meta name="viewport" content="width=device-width">
   <link rel="shortcut icon" href="favicon.png"/>
@@ -12,46 +12,57 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,500;0,700;1,500;1,700&family=Cormorant+Unicase:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,500;0,600;0,700;1,500;1,700&family=Cormorant+Unicase:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="cover image-frame" style="background-image: url('img/image-52.jpg');">
-    <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
+    <p>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></p>
   </div>
   <img src="img/profile4.jpg" class="profile" />
-  <h3>Counselling</h3>
-  <p>Psychological support for people experiencing stress, anxiety, depression and loss.<p/>
-  <p>Help navigating relationships, work and career difficulties, and life crises and transitions.</p>
-  <p>Online or in-person in Berlin; <br/>in English or German.</p>
-  <h3>Fees</h3>
-  <p>0&mdash;50€ per session (income-based).<br/>
-    Free consultation. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a>.<br/>
-  While in training I work under supervision.</p>
+  <h1>
+    <span>Mental health support for people experiencing stress, anxiety, depression, work and relationship difficulties, crisis or transition.</span>
+    <span>In Berlin or online; <br/>in English or German.</span>
+  </h1>
   <hr>
-  <h3>How counselling can help:</h3>
+  <p class="cta">Our first conversation is free. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <hr>
+  <h2>How counselling can help:</h2>
   <ul>
     <li>Work through a long-term problem</li>
     <li>Talk through a recent experience, get a second opinion</li>
-    <li>Take pressure off partners, friends or family</li>
-    <li>Talk about something you don't have time or space for elsewhere</li>
+    <li>Take some pressure off the people around you</li>
+    <li>Discuss something you can’t speak about anywhere else</li>
   </ul>
-  <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
-    It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.</p>
   <hr>
-  <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <h2>Fees</h2>
+  <p>I’m in-training as a counsellor and building a practice.<br/>
+  I want our work to be an affordable investment in your mental health.</p>
+  <p>Fees are income-based&mdash;I invite you to set a fee that fits to your financial situation:
+    <ul>
+      <li>for <em>individuals</em>: 0&mdash;50€ per session</li>
+      <li>for <em>couples</em>: 0&mdash;80€ per session</li>
+      <!-- <li>In a <em>group</em>: 0&mdash;30€ per session</li> -->
+    </ul>
+  </p>
+  <hr>
+  <p class="cta">Our first conversation is free. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  
   <hr>
   <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
-  <h2 id="approach">Approach</h2>
-  <p>My approach is person-centred and integrative.
-    <em>Person-centred</em> means the process is yours, and is guided by you, however you are on the day.
-    <em>Integrative</em> means I work with ideas and techniques from different schools of psychology. My current training integrates systemic and cognitive-behavioural theories, while my introductory studies centred around psychoanalysis and analytical psychology. So my approach starts with a practical attitude towards thoughts, feelings and relationships, acknowledging that problems can have roots in unconscious patterns which might present existential or symbolic aspects.</p>
+  <h2 id="approach">My approach:</h2>
+      <ul>
+        <li>is <em>person-centred</em>, beginning with you, however you are on the day;</li>
+        <li>is <em>systemic</em> in seeing both internal and external worlds as networks of situations, processes and relationships;</li>
+        <li>is <em>cognitive-behavioural</em> in working with thoughts, feelings and behaviours as the core elements of subjective experience;</li>
+        <li>is <em>analytic</em> in working with dialogue and an attitude of exploration;</li>
+        <li>is <em>Jungian</em> in appreciating images and metaphors, and being curious about dreams.</li>
+      </ul>
 
-
-  <!-- <hr>
-  <p  class="cta">Free consultation: write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p> -->
-  <!-- <hr> -->
   <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
+    
+  <h2 id="about">About me</h2>
+  <p>My background is in design, technology and music, working as a team lead, mentor and teacher. Design work is essentially about asking questions and exploring possibilities. I always found my work with people to be the most rewarding, whether helping clients to articulate a vision, or helping colleagues to manage stress and uncertainty. My work led me to psychology, philosophy and personal development. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
   <h2 id="training">Training &amp; Education</h2>
   <table>
     <tr>
@@ -83,21 +94,18 @@
       </td>
     </tr>
   </table>
-
-  
-  <h2 id="about">About</h2>
-  <p>I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
-  <p>My work led me to psychology, philosophy and personal development. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
   
-  <h3>Safety</h3>
-  <!-- <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p> -->
-  <p>If you are in an acute crisis, or someone is in danger, please contact one of the following:</p>
-  <ul>
-    <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
-    <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
-  </ul>
+  <h2>Safety</h2>
+    <p>While in training I work under supervision.</p>
+    <p>If you are in an acute crisis, or someone is in danger, please contact one of the following:
+    <ul>
+      <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
+      <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
+    </ul>
+  </p>
   <hr>
+  <footer>&copy; Ant Orant 2025 &mdash; ant@orant.xyz</footer>
 </body>
 </html>
 
