--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <span>In Berlin or online; <br/>in English or German.</span>
   </h1>
   <hr>
-  <p class="cta">Our first conversation is free. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
   <h2>How counselling can help:</h2>
   <ul>
