Edit text, update DE page

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,500;0,600;0,700;1,500;1,700&family=Cormorant+Unicase:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,500;0,700;1,500;1,700&family=Cormorant+Unicase:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="cover image-frame" style="background-image: url('img/image-52.jpg');">
     <p>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></p>
   </div>
-  <img src="img/profile4.jpg" class="profile" />
+  <img src="img/profile3.jpg" class="profile" />
   <h1>
     <span>Mental health support for people experiencing stress, anxiety, depression, work and relationship difficulties, crisis or transition.</span>
-    <span>In Berlin or online; <br/>in English or German.</span>
+    <span>In Berlin or online; <br/>in English or <a href="index-de.html">German</a>.</span>
   </h1>
   <hr>
   <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
@@ -76,7 +76,7 @@
       <td>2024</td>
       <td>
         Winter Intensive Study Program, Analytical Psychology<br/>
-        <em>C.G. Jung-Institut, Zürich, CH</em>
+        <em>C.G. Jung-Institut, Z&uuml;rich, CH</em>
       </td>
     </tr>
     <tr>
