--- a/index-de.html
+++ b/index-de.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Counselling &mdash; Ant Orant</title>
-  <meta name="description" content="">
+  <title>Counselling: psychologische Unterst&uuml;tzung in Berlin oder online &mdash; Ant Orant</title>
+  <meta name="description" content="Psychologische Unterst&uuml;tzung bei Stress, Angst, Depression, Arbeits- und Beziehungsschwierigkeiten, Krise oder &uuml;bergang. In Berlin oder online; auf Englisch oder Deutsch">
 
   <meta name="viewport" content="width=device-width">
   <link rel="shortcut icon" href="favicon.png"/>
@@ -16,65 +16,95 @@
 </head>
 <body>
   <div class="cover image-frame" style="background-image: url('img/image-52.jpg');">
-    <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
+    <p>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></p>
   </div>
   <img src="img/profile3.jpg" class="profile" />
-  <p>Im Rahmen meiner Weiterbildung in Beratung biete ich psychologische Unterstützung für Einzelpersonen an.</p>
-  <!-- <hr> -->
-  <h3>Können wir besprechen:</h3>
-  <p>Angst, Arbeit, Arbeitslosigkeit, Bedürfnisse/Grenzen, Beziehungen, Familie, Krankheit, Konflikte, Kommunikation, Kreativität, Stress, Tod, Trauer, Trennung, Verlust, usw.</p>
-  <hr>
-  <h3>Preise</h3>
-  <p>50€ pro Sitzung, flexibel.<br/>Erstes Gespräch ist kostenlos.<br/>
-  Während der Weiterbildung arbeite ich unter Supervision.</p>
+  <h1>
+    <span>Psychologische Unterst&uuml;tzung bei Stress, Angst, Depression, Arbeits- und Beziehungsschwierigkeiten, in Krisen oder &Uuml;berg&auml;ngen.</span>
+    <span>In Berlin oder online; <br/>auf <a href="index.html">Englisch</a> oder Deutsch.</span>
+  </h1>
   <hr>
   <p class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
-  <h3>Wie es helfen kann:</h3>
+  <h2>Wie es helfen kann:</h2>
   <ul>
-    <li>Bewältigung eines Langzeitproblems</li>
-    <li>Über eine kürzlich gemachte Erfahrung sprechen, eine zweite Meinung einholen</li>
-    <li>Entlastung von Partnern, Freunden und Familie</li>
-    <li>Gespräch über Dinge, für die man sonst keine Zeit oder keinen Platz hat</li>
+    <li>Ein langfristiges Problem durcharbeiten</li>
+    <li>Eine aktuelle Erfahrung besprechen, eine zweite Meinung bekommen</li>
+    <li>Die Menschen um dich herum entlasten</li>
+    <li>Etwas besprechen, wor&uuml;ber du anderswo nicht sprechen kannst</li>
   </ul>
   <hr>
-  <p>Ein vertraulicher 1:1-Raum zum Zuhören, Nachdenken und Reflektieren; Gespräche am Telefon oder online.<p>
-  <!-- <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
-    It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.</p> -->
+  <h2>Geb&uuml;hren</h2>
+  <p>Ich bin noch in der Ausbildung und baue eine Praxis auf.<br/>
+  Ich m&ouml;chte, dass unsere Arbeit eine bezahlbare Investition in deine psychische Gesundheit ist.</p>
+  <p>Die Geb&uuml;hren sind einkommensabh&auml;ngig&mdash;ich lade dich ein, eine Geb&uuml;hr festzulegen, die zu deiner finanziellen Situation passt:
+    <ul>
+      <li>f&uuml;r <em>Einzelpersonen</em>: 0&mdash;50€ pro Sitzung</li>
+      <li>f&uuml;r <em>Paare</em>: 0&mdash;80€ pro Sitzung</li>
+      <!-- <li>In a <em>group</em>: 0&mdash;30€ per session</li> -->
+    </ul>
+  </p>
   <hr>
-  <p class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p class="cta">Unser erstes Gespr&auml;ch ist kostenlos. Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  
   <hr>
-  <!--
+  <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
+  <h2 id="approach">Mein Ansatz:</h2>
+  <ul>
+    <li>ist <em>personenzentriert</em> und beginnt bei dir, wie du gerade am Tag bist;</li>
+    <li>ist <em>systemisch</em> und sieht sowohl die innere als auch die &auml;ußere Welt als Netzwerke von Situationen, Prozessen und Beziehungen;</li>
+    <li>ist <em>kognitiv-verhaltenstherapeutisch</em> und arbeitet mit Gedanken, Gef&uuml;hlen und Verhaltensweisen als Kernelementen subjektiver Erfahrung;</li>
+    <li>ist <em>analytisch</em> und arbeitet mit Dialog und einer Haltung der Erkundung;</li>
+    <li>ist <em>jungianisch</em> und sch&auml;tzt Bilder und Metaphern sowie die Neugier auf Tr&auml;ume.</li>
+  </ul>
   <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
-  <h2 id="about">About</h2>
-  <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
-  <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by eastern/ancient thought systems and comparative religion in general.</p>
-  <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
-  <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
-  <h2 id="approach">Approach</h2>
-  <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
-  <p>I work with the following basic principles:</p>
-  <ul>
-    <li>"The talking cure": talking through one's thoughts and feelings, with an interested, objective person, is therapeutic in itself.</li>
-    <li>Growth is painful, and there is no life without suffering, but there is always meaning, value and purpose to be found within.</li>
-    <li>Recognising and integrating the unconscious aspects of our inner life is the key to psychological health.</li>
-  </ul>
-
-  <hr>
-  <p  class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-  <hr>
-  -->
+    
+  <h2 id="about">&uuml;ber mich</h2>
+  <p>Mein Hintergrund liegt in Design, Technologie und Musik, wo ich als Teamleiter, Mentor und Lehrer gearbeitet habe. Designarbeit bedeutet im Wesentlichen, Fragen zu stellen und M&ouml;glichkeiten zu erkunden. Ich fand die Arbeit mit Menschen immer am bereicherndsten, sei es dabei, Kunden zu helfen, eine Vision zu artikulieren, oder Kollegen zu unterst&uuml;tzen, mit Stress und Unsicherheit umzugehen. Meine Arbeit f&uuml;hrte mich zu Psychologie, Philosophie und Selbstentwicklung. Durch das Tagebuchschreiben interessierte ich mich f&uuml;r meine Tr&auml;ume, was mich zur Arbeit von C.G. Jung f&uuml;hrte und wiederum zu einem Interesse an Psychoanalyse und Tiefenpsychologie im Allgemeinen.</p>
+  <h2 id="training">Aus- &amp; Weiterbildung</h2>
+  <table>
+    <tr>
+      <td>2024-2025</td>
+      <td>
+        MA Counselling<br/>
+        <em>Theologische Hochschule Friedensau, DE</em>
+      </td>
+    </tr>
+    <tr>
+      <td>2024</td>
+      <td>
+        Winter Intensive Study Program, Analytical Psychology<br/>
+        <em>C.G. Jung-Institut, Z&uuml;rich, CH</em>
+      </td>
+    </tr>
+    <tr>
+      <td>2024</td>
+      <td>
+        Introductory Lecture Series, Psychoanalysis<br/>
+        <em>Institute of Psychoanalysis, London, UK</em>
+    </td>
+    </tr>
+    <tr>
+      <td>2004-2007</td>
+      <td>
+        BA(Hons), Fine Art<br/>
+        <em>Leeds Metropolitan University, UK</em>
+      </td>
+    </tr>
+  </table>
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
-  <h3>Sicherheit</h3>
-  <p>Ich habe noch keine Akkreditierung als Berater/in. Während der Weiterbildung arbeite ich unter Supervision. Die Gespräche sind als Ergänzung zu einer professionellen Psychotherapie, als leichter zugängliche Alternative oder als Schritt auf dem Weg zur richtigen Hilfe gedacht.</p>
-  <p>Wenn es sich um eine akute Krise handelt oder jemand in Gefahr ist, wende dich bitte an eine ausgebildete Fachkraft:</p>
-  <ul>
-    <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a><br/></li>
-    <li><a href="https://krisenchat.de/en">Krisenchat</a><br/></li>
-    <li><a href="https://www.samaritans.org/">Samaritans</a><br/></li>
-  </ul>
+  
+  <h2>Sicherheit</h2>
+  <p>W&auml;hrend meiner Ausbildung arbeite ich unter Supervision.</p>
+  <p>Wenn du dich in einer akuten Krise befindest oder jemand in Gefahr ist, kontaktiere bitte eine der folgenden Stellen:
+    <ul>
+      <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
+      <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
+    </ul>
+  </p>
   <hr>
+  <footer>&copy; Ant Orant 2025 &mdash; ant@orant.xyz</footer>
 </body>
 </html>
 
