--- a/index-de.html
+++ b/index-de.html
@@ -18,26 +18,26 @@
   <div class="cover image-frame" style="background-image: url('img/image-52.jpg');">
     <p>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></p>
   </div>
-  <img src="img/profile3.jpg" class="profile" />
+  <img src="img/profile4.jpg" class="profile" />
   <h1>
-    <span>Psychologische Unterst&uuml;tzung bei Stress, Angst, Depression, Arbeits- und Beziehungsschwierigkeiten, in Krisen oder &Uuml;berg&auml;ngen.</span>
+    <span>Psychologische Unterst&uuml;tzung bei Stress, Angst, Depression, Arbeits- und Beziehungsschwierigkeiten, in Krisen oder bei Ver&auml;nderungsprozessen.</span>
     <span>In Berlin oder online; <br/>auf <a href="index.html">Englisch</a> oder Deutsch.</span>
   </h1>
   <hr>
-  <p class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p class="cta">Schreib mir unter <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
-  <h2>Wie es helfen kann:</h2>
+  <h2>Dabei kann ich dich unterst&uuml;tzen:</h2>
   <ul>
     <li>Ein langfristiges Problem durcharbeiten</li>
-    <li>Eine aktuelle Erfahrung besprechen, eine zweite Meinung bekommen</li>
+    <li>Eine aktuelle Herausforderung besprechen, eine zweite Meinung bekommen</li>
     <li>Die Menschen um dich herum entlasten</li>
-    <li>Etwas besprechen, wor&uuml;ber du anderswo nicht sprechen kannst</li>
+    <li>Themen besprechen, &uuml;ber die du anderswo nicht gut sprechen kannst</li>
   </ul>
   <hr>
-  <h2>Geb&uuml;hren</h2>
-  <p>Ich bin noch in der Ausbildung und baue eine Praxis auf.<br/>
+  <h2>Kosten</h2>
+  <p>Ich befinde mich aktuell noch in Ausbildung und baue meine Praxis auf.<br/>
   Ich m&ouml;chte, dass unsere Arbeit eine bezahlbare Investition in deine psychische Gesundheit ist.</p>
-  <p>Die Geb&uuml;hren sind einkommensabh&auml;ngig&mdash;ich lade dich ein, eine Geb&uuml;hr festzulegen, die zu deiner finanziellen Situation passt:
+  <p>Die Kosten gestalte ich einkommensabh&auml;ngig&mdash;ich biete dir an, einen Beitrag festzulegen, der zu deiner finanziellen Situation passt:
     <ul>
       <li>f&uuml;r <em>Einzelpersonen</em>: 0&mdash;50€ pro Sitzung</li>
       <li>f&uuml;r <em>Paare</em>: 0&mdash;80€ pro Sitzung</li>
@@ -51,17 +51,17 @@
   <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
   <h2 id="approach">Mein Ansatz:</h2>
   <ul>
-    <li>ist <em>personenzentriert</em> und beginnt bei dir, wie du gerade am Tag bist;</li>
-    <li>ist <em>systemisch</em> und sieht sowohl die innere als auch die &auml;ußere Welt als Netzwerke von Situationen, Prozessen und Beziehungen;</li>
-    <li>ist <em>kognitiv-verhaltenstherapeutisch</em> und arbeitet mit Gedanken, Gef&uuml;hlen und Verhaltensweisen als Kernelementen subjektiver Erfahrung;</li>
-    <li>ist <em>analytisch</em> und arbeitet mit Dialog und einer Haltung der Erkundung;</li>
-    <li>ist <em>jungianisch</em> und sch&auml;tzt Bilder und Metaphern sowie die Neugier auf Tr&auml;ume.</li>
+    <li>ist <em>personenzentriert</em> und beginnt bei dir, genau da, wo du gerade stehst;</li>
+    <li>ist <em>systemisch</em> und ber&uuml;cksichtigt sowohl deine innere als auch äußere Welt in Form von Lebensumständen, inneren Prozessen und Beziehungen;</li>
+    <li>ist <em>kognitiv-verhaltenstherapeutisch</em> und arbeitet mit Gedanken, Gef&uuml;hlen und Verhaltensweisen als Aspekte deiner subjektiven Erfahrung;</li>
+    <li>ist <em>analytisch</em> und arbeitet dialogisch and explorativ;</li>
+    <li>ist <em>jungianisch</em> und wertsch&auml;tzt Bilder und Metaphern und Tr&auml;ume.</li>
   </ul>
   <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
     
   <h2 id="about">&uuml;ber mich</h2>
-  <p>Mein Hintergrund liegt in Design, Technologie und Musik, wo ich als Teamleiter, Mentor und Lehrer gearbeitet habe. Designarbeit bedeutet im Wesentlichen, Fragen zu stellen und M&ouml;glichkeiten zu erkunden. Ich fand die Arbeit mit Menschen immer am bereicherndsten, sei es dabei, Kunden zu helfen, eine Vision zu artikulieren, oder Kollegen zu unterst&uuml;tzen, mit Stress und Unsicherheit umzugehen. Meine Arbeit f&uuml;hrte mich zu Psychologie, Philosophie und Selbstentwicklung. Durch das Tagebuchschreiben interessierte ich mich f&uuml;r meine Tr&auml;ume, was mich zur Arbeit von C.G. Jung f&uuml;hrte und wiederum zu einem Interesse an Psychoanalyse und Tiefenpsychologie im Allgemeinen.</p>
+  <p>Ich habe einen beruflichen Hintergrund im Bereich Design, Technologie und Musik, wo ich als Teamleiter, Mentor und Lehrer tätig war. Designarbeit bedeutet im Wesentlichen, Fragen zu stellen und M&ouml;glichkeiten zu erkunden. Am meisten habe ich dabei die Arbeit mit Menschen gesch&auml;tzt, sei es, Kunden zu helfen, ihre Vision zu formulieren, oder Kolleg:innen zu unterst&uuml;tzen, mit Stress und Unsicherheiten umzugehen. Diese Erfahrungen haben mich zur Besch&auml;ftigung mit Psychologie, Philosophie und Selbstentwicklung inspiriert. Ich begann, mich mit meinen Träume zu beschäftigen, was mich zur Arbeit von C.G. Jung f&uuml;hrte und zu einem Interesse an Psychoanalyse und Tiefenpsychologie im Allgemeinen.</p>
   <h2 id="training">Aus- &amp; Weiterbildung</h2>
   <table>
     <tr>
@@ -95,9 +95,9 @@
   </table>
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
   
-  <h2>Sicherheit</h2>
+  <h2>Das solltest du wissen</h2>
   <p>W&auml;hrend meiner Ausbildung arbeite ich unter Supervision.</p>
-  <p>Wenn du dich in einer akuten Krise befindest oder jemand in Gefahr ist, kontaktiere bitte eine der folgenden Stellen:
+  <p>Wenn du dich in einer akuten Krise befindest oder jemand anders in Gefahr ist, kontaktiere bitte eine der folgenden Stellen:
     <ul>
       <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
       <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
