Update title attr

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Counselling: mental health support in Berlin or online &mdash; Ant Orant</title>
-  <meta name="description" content="Mental health support for stress, anxiety, depression, work and relationship difficulties, crisis or transition. In Berlin or online; in English or German">
+  <meta name="description" content="Counselling: mental health support for stress, anxiety, depression, work and relationship difficulties, crisis or transition. In Berlin or online; in English or German">
 
   <meta name="viewport" content="width=device-width">
   <link rel="shortcut icon" href="favicon.png"/>
