--- a/index-de.html
+++ b/index-de.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Counselling: psychologische Unterst&uuml;tzung in Berlin oder online &mdash; Ant Orant</title>
-  <meta name="description" content="Psychologische Unterst&uuml;tzung bei Stress, Angst, Depression, Arbeits- und Beziehungsschwierigkeiten, Krise oder &uuml;bergang. In Berlin oder online; auf Englisch oder Deutsch">
+  <meta name="description" content="Psychologische Unterst&uuml;tzung bei Stress, Angst, Depression, Arbeits- und Beziehungsschwierigkeiten, Krisen oder Ver&auml;nderungsprozessen. In Berlin oder online; auf Englisch oder Deutsch">
 
   <meta name="viewport" content="width=device-width">
   <link rel="shortcut icon" href="favicon.png"/>
