--- a/index-de.html
+++ b/index-de.html
@@ -55,7 +55,7 @@
     <li>ist <em>systemisch</em> und ber&uuml;cksichtigt sowohl deine innere als auch äußere Welt in Form von Lebensumständen, inneren Prozessen und Beziehungen;</li>
     <li>ist <em>kognitiv-verhaltenstherapeutisch</em> und arbeitet mit Gedanken, Gef&uuml;hlen und Verhaltensweisen als Aspekte deiner subjektiven Erfahrung;</li>
     <li>ist <em>analytisch</em> und arbeitet dialogisch and explorativ;</li>
-    <li>ist <em>jungianisch</em> und wertsch&auml;tzt Bilder und Metaphern und Tr&auml;ume.</li>
+    <li>ist <em>jungianisch</em> und wertsch&auml;tzt Bilder, Metaphern und Tr&auml;ume.</li>
   </ul>
   <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
