Add supervision detail

--- a/index-de.html
+++ b/index-de.html
@@ -96,7 +96,8 @@
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
   
   <h2>Das solltest du wissen</h2>
-  <p>W&auml;hrend meiner Ausbildung arbeite ich unter Supervision.</p>
+  <p>W&auml;hrend meiner Ausbildung arbeite ich unter Supervision.<br/>
+    <small>(Die Arbeit wird besprochen, anonymisiert, mit erfahrenen Mentoren)</small></p>
   <p>Wenn du dich in einer akuten Krise befindest oder jemand anders in Gefahr ist, kontaktiere bitte eine der folgenden Stellen:
     <ul>
       <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
