--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
   
   <h2>Safety</h2>
-    <p>While in training I work under supervision.</p>
+    <p>While in training I work under supervision.<br/>
+      <small>(I discuss the work, anonymised, with experienced mentors)</small></p>
     <p>If you are in an acute crisis, or someone is in danger, please contact one of the following:
     <ul>
       <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
