Update approach text

--- a/index-de.html
+++ b/index-de.html
@@ -49,19 +49,14 @@
   
   <hr>
   <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
-  <h2 id="approach">Mein Ansatz:</h2>
-  <ul>
-    <li>ist <em>personenzentriert</em> und beginnt bei dir, genau da, wo du gerade stehst;</li>
-    <li>ist <em>systemisch</em> und ber&uuml;cksichtigt sowohl deine innere als auch äußere Welt in Form von Lebensumständen, inneren Prozessen und Beziehungen;</li>
-    <li>ist <em>kognitiv-verhaltenstherapeutisch</em> und arbeitet mit Gedanken, Gef&uuml;hlen und Verhaltensweisen als Aspekte deiner subjektiven Erfahrung;</li>
-    <li>ist <em>analytisch</em> und arbeitet dialogisch and explorativ;</li>
-    <li>ist <em>jungianisch</em> und wertsch&auml;tzt Bilder, Metaphern und Tr&auml;ume.</li>
-  </ul>
+  <h2 id="approach">Mein Ansatz</h2>
+  <p>Unser Arbeit beginnt immer bei dir, genau da, wo du gerade am Tag stehst. Ich biete dir einen gesch&uuml;tzten und nicht-wertenden Raum zum Zuh&ouml;ren und Nachdenken, um dein pers&ouml;nliches Erleben mit Demut, Geduld und Neugier zu erkunden. Im Mittelpunkt stehen Gedanken, Gef&uuml;hle und Verhaltensweisen, und wie sie mit Situationen und Beziehungen in der Außenwelt zusammenh&auml;ngen.</p>
+  <p>Beratung kannst du als kurzfristige Ressource nutzen, um mit akutem Stress oder &uuml;berw&auml;ltigenden Gef&uuml;hlen umzugehen. Regelm&auml;ßige Sitzungen k&ouml;nnen dir dabei helfen, Widerstandskraft aufzubauen und eine engere Verbindung zu deinem inneren Erleben zu entwickeln – was transformierend auf dein Wohlbefinden, deine kreative Arbeit und deine Beziehungen wirken kann. Im Laufe der Zeit kann sich ein Bewusstsein f&uuml;r tiefere oder feinere Muster entwickeln und zu grundlegenden Einsichten &uuml;ber dich selbst f&uuml;hren.</p>
   <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
     
   <h2 id="about">&uuml;ber mich</h2>
-  <p>Ich habe einen beruflichen Hintergrund im Bereich Design, Technologie und Musik, wo ich als Teamleiter, Mentor und Lehrer tätig war. Designarbeit bedeutet im Wesentlichen, Fragen zu stellen und M&ouml;glichkeiten zu erkunden. Am meisten habe ich dabei die Arbeit mit Menschen gesch&auml;tzt, sei es, Kunden zu helfen, ihre Vision zu formulieren, oder Kolleg:innen zu unterst&uuml;tzen, mit Stress und Unsicherheiten umzugehen. Diese Erfahrungen haben mich zur Besch&auml;ftigung mit Psychologie, Philosophie und Selbstentwicklung inspiriert. Ich begann, mich mit meinen Träume zu beschäftigen, was mich zur Arbeit von C.G. Jung f&uuml;hrte und zu einem Interesse an Psychoanalyse und Tiefenpsychologie im Allgemeinen.</p>
+  <p>Ich habe einen beruflichen Hintergrund im Bereich Design, Technologie und Musik, wo ich als Teamleiter, Mentor und Lehrer t&auml;tig war. Designarbeit bedeutet im Wesentlichen, Fragen zu stellen und M&ouml;glichkeiten zu erkunden. Am meisten habe ich dabei die Arbeit mit Menschen gesch&auml;tzt, sei es, Kunden zu helfen, ihre Vision zu formulieren, oder Kolleg:innen zu unterst&uuml;tzen, mit Stress und Unsicherheiten umzugehen. Diese Erfahrungen haben mich zur Besch&auml;ftigung mit Psychologie, Philosophie und Selbstentwicklung inspiriert. Ich begann, mich mit meinen Tr&auml;ume zu besch&auml;ftigen, was mich zur Arbeit von C.G. Jung f&uuml;hrte und zu einem Interesse an Psychoanalyse und Tiefenpsychologie im Allgemeinen.</p>
   <h2 id="training">Aus- &amp; Weiterbildung</h2>
   <table>
     <tr>
