--- a/index.html
+++ b/index.html
@@ -49,14 +49,9 @@
   
   <hr>
   <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
-  <h2 id="approach">My approach:</h2>
-      <ul>
-        <li>is <em>person-centred</em>, beginning with you, however you are on the day;</li>
-        <li>is <em>systemic</em> in seeing both internal and external worlds as networks of situations, processes and relationships;</li>
-        <li>is <em>cognitive-behavioural</em> in working with thoughts, feelings and behaviours as the core elements of subjective experience;</li>
-        <li>is <em>analytic</em> in working with dialogue and an attitude of exploration;</li>
-        <li>is <em>Jungian</em> in appreciating images and metaphors, and being curious about dreams.</li>
-      </ul>
+  <h2 id="approach">My approach</h2>
+  <p>Our work always begins with you, however you are on the day. I provide a confidential and non-judgmental space for listening and reflection, for exploring your subjective experience with an attitude of humility, patience and curiosity. Our primary material is thoughts, feelings and behaviours, and how they relate to situations and relationships in the outside world.</p>
+  <p>You can use counselling as a short-term, on-demand resource for coping with acute stress or overwhelming feelings. Regular work can help you to develop resilience and a closer attunement to inner life, with potentially transformative effects on your sense of well-being, your creative work, and your relationships. Over time, the work can foster an awareness of deeper or more subtle patterns, and lead to more profound insights about oneself.</p>
 
   <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
